...
    <string name="app_name">LoyaltyMobileSDK-Sample</string>
    <string name="cd_onboard_screen_onboard_image">"onboarding screen Image"</string>
    <string name="voucher_back_button">"Voucher_Back_Button"</string>
    <string name="cd_onboard_screen_bottom_fade">"onboarding screen bottom fading"</string>
    <string name="spin_wheel_pointer">spin_wheel_pointer</string>
    <string name="cd_close_popup">"Close Popup"</string>
    <string name="cd_app_logo">"Application Logo"</string>

    <string name="onboard_screen_text_1">"Get personalized \noffers"</string>
...
    <string name="join_text_already_signed_in">We’re thrilled that you want to join us. Click Join and earn points and receive exclusive rewards.</string>

    <string name="screen_title_home">"Home"</string>
    <string name="screen_title_my_offers">"My Promotions"</string>
    <string name="screen_title_my_profiles">"My Profile"</string>
...
    <string name="text_promotions">"Promotions"</string>
    <string name="screen_title_redeem">"Redeem"</string>
    <string name="screen_title_more">"More"</string>
    <string name="my_transactions">"My Transactions"</string>
    <string name="view_all">"View All"</string>
    <string name="my_benefits">"My Benefits"</string>
    <string name="vouchers">"Vouchers"</string>
    <string name="my_membership_code">"My Membership Code"</string>
    <string name="membership_qr_code">"QR Code"</string>
...
    <string name="tab_unenrolled">"Available to Opt In"</string>

    <string name="voucher_text_available">"Available"</string>
    <string name="voucher_text_redeemed">"Redeemed"</string>
    <string name="voucher_text_expired">"Expired"</string>

    <string name="home_screen_welcome_start_text">"Hello"</string>
...
    <string name="header_label_dates">Date Format</string>
    <string name="header_label_favourite">Favorites</string>
    <string name="header_label_game_zone">Game Zone</string>
    <string name="header_label_my_referrals">My Referrals</string>
    <string name="label_opt_in">"Opt In"</string>
...
    <string name="scan_progress_indicator">Generating preview…</string>
    <string name="scan_progress_subheader">Hang in there! This may take a minute.</string>
    <string name="btn_cancel">Cancel</string>
    <string name="request_permission">Request permission</string>
    <string name="permission_message">The camera is important for this app. Please grant the permission.</string>
...
    <string name="image_more_than_5mb_msg">Image is more than 5 MB please try again.</string>
    <string name="error_cd">Error while scanning</string>
    <string name="played_game_popup_cd">played_game_popup_cd</string>
    <string name="receipt_scanning_error_desc">Something went wrong. Try again.</string>
    <string name="receipt_scanning_error_desc_image">Image size exceeds 5 MB. Either resize the image or recapture with a lower resolution.</string>
...
    <string name="game_scratch_card_sub_title">Unlock instant rewards!</string>
    <string name="game_scratch_card_instruction">Scratch coupon to play</string>
    <string name="game_scratch_card_detail_instruction">Grab this exclusive onetime offer and win some exciting rewards.</string>
    <string name="tab_game_zone_active">Active</string>
    <string name="tab_game_zone_available">Available</string>
    <string name="tab_game_zone_expired">Expired</string>
    <string name="tab_game_zone_played">Played</string>
    <string name="game_expiring_tomorrow">Expiring Tomorrow</string>
    <string name="game_placeholder_title">Bonnie and Clyde Style Promotion</string>
    <string name="game_placeholder_scratch_card_title">Cat Scratch Fever</string>
    <string name="game_spin_the_wheel">Spin the Wheel</string>
    <string name="game_scratch_card">Scratchcard</string>
    <string name="tap_spin_to_play">Tap \'Spin\' to play.</string>
    <string name="text_spin_the_wheel">Spin the Wheel</string>
    <string name="cd_game_back_button">game back button</string>

    <!-- Game zone Better luck Screen -->
    <string name="better_luck_next_time">Better luck next time!</string>
    <string name="better_luck_next_time_sub_header"><![CDATA[Thank you for playing! Stay tuned for more offers.]]></string>

    <!-- Game zone Congratulations Screen -->
    <string name="game_zone_congrats_header_content">Congratulations!</string>
    <string name="game_zone_congrats_sub_header_content"><![CDATA[You\'ve won a %s for your next purchase. To redeem your reward, go to the Voucher.]]></string>
    <string name="game_zone_congrats_msg_loyalty_points"><![CDATA[You\'ve won %s that you can redeem on your next purchase.]]></string>
...
    <string name="game_error_dialog_ok">OK</string>
    <string name="game_error_msg">Oops! Something went wrong \u2028 while processing the request. Try again.</string>
    <string name="play_more_text">Play More</string>

    <!-- My Referrals Strings Start -->
...
    <!-- My Referrals Strings End -->

    <string name="text_go_to_voucher_section">Go to Vouchers</string>
    <string name="text_better_luck_reward">Thank you for playing! Stay tuned for more offers.</string>
    <string name="text_congratulations">Congratulations!</string>
    <string name="text_played_90_days">Games Played in the last 90 days</string>
    <string name="text_expired_90_days">No longer available</string>
    <string name="text_played">Played</string>
    <string name="receipt_progress_subheading">Hang in there! This may take a minute.</string>
...
