...
        const val TEST_TAG_GAME_ZONE_ITEM= "game_zone_item"
        const val TEST_TAG_GAME_ZONE_ITEM_IMAGE= "game_zone_item_image"
        const val TEST_TAG_GAME_ZONE_ITEM_TITLE= "game_zone_item_title"
        const val TEST_TAG_GAME_ZONE_ITEM_TYPE= "game_zone_item_sub_type"
        const val TEST_TAG_GAME_ZONE_ITEM_EXPIRY= "game_zone_item_sub_expiry"
        const val TEST_TAG_GAME_REWARD= "game_zone_played_game_reward"
        const val TEST_TAG_PLAYED_GAME_PUPUP= "game_zone_played_game_popup"
        const val TEST_TAG_PLAYED_GAME_PUPUP_HEADING= "game_zone_played_game_popup_heading"
        const val TEST_TAG_PLAYED_GAME_PUPUP_MSG= "game_zone_played_game_popup_msg"
        const val TEST_TAG_VOUCHER_SCREEN= "voucher_screen"
        const val TEST_TAG_SPIN_WHEEL_BG= "spin_wheel_bg"
        const val TEST_TAG_SPIN_WHEEL_HEADER= "spin_wheel_header"
        const val TEST_TAG_SPIN_WHEEL_CIRCLE= "spin_wheel_circle"
        const val TEST_TAG_SPIN_WHEEL_FRAME= "spin_wheel_frame"
        const val TEST_TAG_SPIN_WHEEL_COLOUR_SEGMENT= "spin_wheel_segment"
        const val TEST_TAG_SPIN_WHEEL_CONTENT= "spin_wheel_content"
        const val TEST_TAG_SPIN_WHEEL_POINTER= "spin_wheel_pointer"
        const val TEST_TAG_SPIN_WHEEL_FOOTER= "spin_wheel_footer"
        const val TEST_TAG_GAME_ZONE_SCREEN="game_zone_screen"
        const val TEST_TAG_SPIN_WHEEL_TEXT="spin_wheel_text"
        const val TEST_TAG_GAME_PLAYED_SCREEN="game_played_screen"
        const val TEST_TAG_GAME_PLAYED_CONFIRMATION_SCREEN="game_played_confirmation_screen"
        const val TEST_TAG_SCRATCH_CARD_SCREEN="scratch_card_screen"
        const val TEST_TAG_SUBHEADER_CONGRATS_SCREEN="subheader_congrats_screen"
        const val TEST_TAG_SCRATCH_CARD="scratch_card"


        const val TEST_TAG_RECEIPT_FIRST_STEP_COMPLETED= "first_step_completed"
        const val TEST_TAG_RECEIPT_SECOND_STEP_COMPLETED= "second_step_completed"

        const val TEST_TAG_VIEW_ALL_BADGE= "test_tag_view_all_badge"
...
