...
                ) {
                    //this is for POC to show image can also be added other than text
                   /* if (pieIndex == 2) {

                        Image(
                            painter = painterResource(id = R.drawable.phone_icon),
                            contentDescription = "game_back_button",
                            contentScale = ContentScale.Fit
                        )
                    }*/

                    Text(
                        text = wheelData[pieIndex].game,
...
