package com.salesforce.loyalty.mobile.myntorewards

import android.content.Context
import android.os.Build
import android.os.Handler
import android.os.Looper.*
import androidx.compose.ui.test.*
import androidx.compose.ui.test.junit4.createComposeRule
import androidx.lifecycle.LiveData
import androidx.lifecycle.MutableLiveData
import androidx.test.ext.junit.runners.AndroidJUnit4
import androidx.test.platform.app.InstrumentationRegistry
import androidx.test.uiautomator.UiDevice
import androidx.test.uiautomator.UiSelector
import com.google.gson.Gson
import com.salesforce.gamification.api.GameAPIClient
import com.salesforce.gamification.api.GameAuthenticator
import com.salesforce.gamification.model.GameDefinition
import com.salesforce.loyalty.mobile.myntorewards.SampleAppUnitTest.Companion.mockReceiptResponse
import com.salesforce.gamification.model.GameRewardResponse
import com.salesforce.gamification.model.Games
import com.salesforce.gamification.repository.GamificationRemoteRepository
import com.salesforce.loyalty.mobile.myntorewards.badge.models.LoyaltyBadgeListProgramMember
import com.salesforce.loyalty.mobile.myntorewards.badge.models.LoyaltyBadgeProgramList
import com.salesforce.loyalty.mobile.myntorewards.badge.models.LoyaltyProgramBadgeListRecord
import com.salesforce.loyalty.mobile.myntorewards.badge.models.LoyaltyProgramMemberBadgeListRecord
import com.salesforce.loyalty.mobile.myntorewards.checkout.models.OrderAttributes
import com.salesforce.loyalty.mobile.myntorewards.checkout.models.OrderCreationResponse
import com.salesforce.loyalty.mobile.myntorewards.checkout.models.OrderDetailsResponse
import com.salesforce.loyalty.mobile.myntorewards.checkout.models.ShippingMethod
import com.salesforce.loyalty.mobile.myntorewards.forceNetwork.ForceAuthManager
import com.salesforce.loyalty.mobile.myntorewards.receiptscanning.models.AnalyzeExpenseResponse
import com.salesforce.loyalty.mobile.myntorewards.receiptscanning.models.ReceiptListResponse
import com.salesforce.loyalty.mobile.myntorewards.referrals.ReferralsLocalRepository
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.MY_PROFILE_FULL_SCREEN_HEADER
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_ADDRESS_DETAIL
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_APP_LOGO_HOME_SCREEN
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_BACK_BUTTON_CHECKOUT_PAYMENT
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_BADGE_DESCRIPTION
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_BADGE_FULLSCREEN_ITEM
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_BADGE_NAME
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_BADGE_TABS_ROW
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_BENEFITS
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_CAMERA_SCREEN
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_CHECKOUT_ADD_TO_CART
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_CHECKOUT_DELIVER_TO_ADDRESS
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_CHECKOUT_FLOW_CONTAINER
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_CHECKOUT_PROMO_DESCRIPTION
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_CHECKOUT_PROMO_NAME
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_CLOSE_POPUP_PROMOTION
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_COLLECTION_TYPE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_CONGRATULATIONS_SCREEN
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_EMAIL_PHONE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_ENROLLMENT_CONGRATULATIONS
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_ERROR_SCREEN
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_EXPIRATION_DATE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_GAME_REWARD
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_GAME_ZONE_ITEM
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_GAME_ZONE_ITEM_EXPIRY
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_GAME_ZONE_ITEM_IMAGE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_GAME_ZONE_ITEM_TITLE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_GAME_ZONE_ITEM_TYPE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_HOME_SCREEN
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_HOME_SCREEN_CONTAINER
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_JOIN_BUTTON
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_JOIN_UI
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_LOGIN_UI
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_MANUAL_RECEIPT_COMMENT
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_MANUAL_RECEIPT_DATE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_MANUAL_RECEIPT_NUMBER
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_MANUAL_RECEIPT_POINT
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_MANUAL_REVIEW_CLOSE_POPUP_ICON
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_MANUAL_REVIEW_HEADER
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_MANUAL_SUBMIT_BUTTON
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_OLD_TRANSACTION
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_ORDER_DESCRIPTION
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_ORDER_IMAGE_SELCTION
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_PAYMENT_UI_CONTAINER
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_PLAYED_GAME_PUPUP
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_PLAYED_GAME_PUPUP_HEADING
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_PLAYED_GAME_PUPUP_MSG
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_PRODUCT_PRICE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_PROFILE_ELEMENT_CONTAINER
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_PROMOTION_CARD
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_PROMO_DESCRIPTION
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_PROMO_ITEM
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_PROMO_LIST
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_PROMO_NAME
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_QR_CODE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_RATING
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_RECEIPT_DETAIL_BACK_BUTTON
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_RECEIPT_DETAIL_SCREEN
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_RECEIPT_FIRST_STEP_COMPLETED
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_RECEIPT_LIST_ITEM
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_RECEIPT_NUMBER
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_RECEIPT_SECOND_STEP_COMPLETED
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_RECEIPT_STATUS
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_RECEIPT_TABLE_SCREEN
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_RECEIPT_UPLOAD
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SELECT_COLOUR_ROW
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SELECT_QUANTITY_ROW
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SHIPPING_PAYMENT_SCREEN
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SHIPPING_PRICE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SIZE_SELECTION_ROW
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SPIN_WHEEL_BG
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SPIN_WHEEL_CIRCLE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SPIN_WHEEL_COLOUR_SEGMENT
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SPIN_WHEEL_CONTENT
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SPIN_WHEEL_FOOTER
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SPIN_WHEEL_FRAME
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SPIN_WHEEL_HEADER
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SPIN_WHEEL_POINTER
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_SUBHEADER_CONGRATS_SCREEN
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_TRANSACTION_LIST
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_VIEW_ALL_BADGE
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_VIEW_ALL_BADGE_FULL_SCREEN
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_VOUCHER_ROW
import com.salesforce.loyalty.mobile.myntorewards.utilities.TestTags.Companion.TEST_TAG_VOUCHER_SCREEN
import com.salesforce.loyalty.mobile.myntorewards.utilities.ViewPagerSupport
import com.salesforce.loyalty.mobile.myntorewards.viewmodels.*
import com.salesforce.loyalty.mobile.myntorewards.viewmodels.blueprint.*
import com.salesforce.loyalty.mobile.myntorewards.viewmodels.viewStates.*
import com.salesforce.loyalty.mobile.myntorewards.views.*
import com.salesforce.loyalty.mobile.sources.loyaltyModels.*
import com.salesforce.referral.repository.ReferralsRepository
import org.junit.Before
import org.junit.Rule
import org.junit.Test
import org.junit.runner.RunWith
import org.mockito.*
import java.lang.reflect.Type


@RunWith(AndroidJUnit4::class)
class SampleAppUnitTest {

    private lateinit var uiDevice: UiDevice

    @get:Rule
    val composeTestRule = createComposeRule()

    companion object {
        var mockReceiptResponse: String ? = null
    }
    @Before
    fun init() {
        //might needed in future
        val appContext = InstrumentationRegistry.getInstrumentation().targetContext
        uiDevice = UiDevice.getInstance(InstrumentationRegistry.getInstrumentation())

        val repository = ReferralsRepository(getAPIService())
        val localRepository =  ReferralsLocalRepository(getLocalAPIService(), "")
        localRepository.setPromotionType(false)
        var myReferralsViewModel = MyReferralsViewModel(repository, localRepository, "")

        composeTestRule.setContent {
            Navigation(
                getMembershipProfileViewModel(),
                getBadgeViewModel(),
                getPromotionViewModel(getPromotionResponse()),
                getVoucherViewModel(),
                getOnBoardingMockViewModel(),
                getBenefitViewModel(),
                getTransactionViewModel(),
                getCheckoutFlowViewModel(),
                getScanningViewModel(),
                getGameViewModel() as GameViewModel,
                myReferralsViewModel
            )
        }

    }

    @Test
    fun login_app_flow() {
        composeTestRule.onNodeWithContentDescription("Application Logo").assertIsDisplayed()
        verify_login_button()
    }

    private fun verify_login_button() {
        app_has_swipe_images()
        verifyLoginTesting()
        display_home_ui_testing()
        verify_gamification_testing()
        receipt_scanning_ui_testing()
        display_promo_popup_testing()
        offer_tab_testing()
        profile_ui_testing()
        verify_more_tab_testing()
        home_screen_extensive_testing()
    }

    @OptIn(ExperimentalTestApi::class)
    private fun verify_gamification_testing() {

        composeTestRule.onNodeWithText("More").performClick()
        composeTestRule.onNodeWithText("Game Zone").assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("Game Zone").assertIsDisplayed()
        composeTestRule.onNodeWithText("Game Zone").performClick()
        composeTestRule.onNodeWithText("Game Zone").assertIsDisplayed()
        composeTestRule.onNodeWithText("More").performClick()
        composeTestRule.onNodeWithText("Game Zone").assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("Game Zone").assertIsDisplayed()
        composeTestRule.onNodeWithText("Game Zone").performClick()
        composeTestRule.onNodeWithText("Game Zone").assertIsDisplayed()
        composeTestRule.onNodeWithText("Available").assertIsDisplayed()
        composeTestRule.onNodeWithText("Expired").assertIsDisplayed()
        composeTestRule.onNodeWithText("Played").assertIsDisplayed()
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM)).assertCountEquals(3)

        composeTestRule.onNodeWithText("Played").performClick()
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM)).assertCountEquals(2)
        composeTestRule.onAllNodes(hasText("Spin the Wheel")).assertCountEquals(2)
        composeTestRule.onNodeWithText("Games Played in the last 90 days").assertIsDisplayed()

        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).assertCountEquals(2)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_TITLE), useUnmergedTree=true).assertCountEquals(2)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_TYPE),useUnmergedTree=true).assertCountEquals(2)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_EXPIRY), useUnmergedTree=true).assertCountEquals(2)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_REWARD), useUnmergedTree=true).assertCountEquals(2)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).onFirst().performClick()


        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).onFirst().performClick()

        composeTestRule.onNodeWithText("Congratulations!").assertIsDisplayed()
        Thread.sleep(2000)
        composeTestRule.onNodeWithTag(TEST_TAG_PLAYED_GAME_PUPUP).assertIsDisplayed()
        composeTestRule.onNodeWithTag(TEST_TAG_PLAYED_GAME_PUPUP_HEADING).assertIsDisplayed()
        composeTestRule.onNodeWithTag(TEST_TAG_PLAYED_GAME_PUPUP_MSG).assertIsDisplayed()
        composeTestRule.onNodeWithText("Go to Vouchers").assertIsDisplayed()
        Thread.sleep(2000)
        composeTestRule.onNodeWithContentDescription("played_game_popup_cd").assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("Close Popup").assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("Close Popup").performClick()
        composeTestRule.onNodeWithTag(TEST_TAG_PLAYED_GAME_PUPUP).assertIsNotDisplayed()

        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).onFirst().performClick()
        composeTestRule.onNodeWithText("Cancel").assertIsDisplayed()

        composeTestRule.onNodeWithText("Cancel").performClick()
        composeTestRule.onNodeWithTag(TEST_TAG_PLAYED_GAME_PUPUP).assertIsNotDisplayed()
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).onFirst().performClick()
        composeTestRule.onNodeWithText("Go to Vouchers").performClick()
        composeTestRule.onNodeWithText("Vouchers").assertIsDisplayed()
        composeTestRule.onNodeWithTag(TEST_TAG_VOUCHER_SCREEN).assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("Voucher_Back_Button").assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("Voucher_Back_Button").performClick()
        composeTestRule.onNodeWithText("Game Zone").assertIsDisplayed()
        composeTestRule.onNodeWithText("Available").assertIsDisplayed()
        composeTestRule.onNodeWithText("Played").performClick()

        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).onLast().performClick()
        composeTestRule.onNodeWithTag(TEST_TAG_PLAYED_GAME_PUPUP).assertIsDisplayed()
        composeTestRule.onNodeWithText("Better luck next time!").assertIsDisplayed()
        composeTestRule.onNodeWithText("Thank you for playing! Stay tuned for more offers.").assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("Close Popup").assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("Close Popup").performClick()
        composeTestRule.onNodeWithTag(TEST_TAG_PLAYED_GAME_PUPUP).assertIsNotDisplayed()

        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).onLast().performClick()

        composeTestRule.onNodeWithText("Cancel").performClick()

        composeTestRule.onNodeWithText("Expired").performClick()
        composeTestRule.onNodeWithText("No longer available").assertIsDisplayed()
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM)).assertCountEquals(1)
        composeTestRule.onAllNodes(hasText("Spin the Wheel")).assertCountEquals(1)
        //composeTestRule.onAllNodes(hasText("Scratch a Card")).assertCountEquals(1)

        composeTestRule.onNodeWithText("Available").performClick()
        composeTestRule.onAllNodes(hasText("Spin the Wheel")).assertCountEquals(2)
        composeTestRule.onAllNodes(hasText("Scratchcard")).assertCountEquals(1)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).assertCountEquals(3)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_TITLE), useUnmergedTree=true).assertCountEquals(3)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_TYPE),useUnmergedTree=true).assertCountEquals(3)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_EXPIRY), useUnmergedTree=true).assertCountEquals(3)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).onFirst().performClick()
        composeTestRule.onNodeWithTag(TEST_TAG_SPIN_WHEEL_BG).assertIsDisplayed()
        composeTestRule.onNodeWithTag(TEST_TAG_SPIN_WHEEL_HEADER).assertIsDisplayed()
        composeTestRule.onNodeWithText("Bonnie and Clyde Style Promotion").assertIsDisplayed()
        composeTestRule.onNodeWithText("Play Spin The Wheel to Get Amazing Rewards").assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("game back button").assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("game back button").performClick()
        composeTestRule.onNodeWithTag(TestTags.TEST_TAG_GAME_ZONE_SCREEN).assertIsDisplayed()
        Thread.sleep(2000)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).onFirst().performClick()
        Thread.sleep(2000)
        composeTestRule.onNodeWithTag(TEST_TAG_SPIN_WHEEL_BG).assertIsDisplayed()

        composeTestRule.onNodeWithTag(TEST_TAG_SPIN_WHEEL_CIRCLE).assertIsDisplayed()
        composeTestRule.onNodeWithTag(TEST_TAG_SPIN_WHEEL_FRAME).assertIsDisplayed()
        composeTestRule.onNodeWithTag(TEST_TAG_SPIN_WHEEL_COLOUR_SEGMENT).assertIsDisplayed()
        composeTestRule.onNodeWithTag(TEST_TAG_SPIN_WHEEL_COLOUR_SEGMENT).assertIsDisplayed()
        composeTestRule.onNodeWithTag(TEST_TAG_SPIN_WHEEL_CONTENT).assertIsDisplayed()
        Thread.sleep(2000)
//        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_SPIN_WHEEL_TEXT), useUnmergedTree=true).assertCountEquals(7)
        composeTestRule.onNodeWithTag(TEST_TAG_SPIN_WHEEL_POINTER).assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("spin_wheel_pointer").assertIsDisplayed()
        composeTestRule.onNodeWithTag(TEST_TAG_SPIN_WHEEL_FOOTER).assertIsDisplayed()
        composeTestRule.onNodeWithText("Grab this exclusive onetime offer and win some exciting rewards.").assertIsDisplayed()
        Thread.sleep(2000)
        composeTestRule.onNodeWithTag(TEST_TAG_SPIN_WHEEL_POINTER).performClick()

        composeTestRule.waitUntilExactlyOneExists(hasTestTag(TestTags.TEST_TAG_GAME_PLAYED_CONFIRMATION_SCREEN), 10000)
        composeTestRule.onNodeWithText("Congratulations!").assertIsDisplayed()
        composeTestRule.onNodeWithText("Congratulations!").assertIsDisplayed()
        composeTestRule.onNodeWithTag(TEST_TAG_SUBHEADER_CONGRATS_SCREEN).assertIsDisplayed()
        Thread.sleep(2000)
        composeTestRule.onNodeWithText("Play More").assertIsDisplayed()
        composeTestRule.onNodeWithText("Play More").performClick()
        Thread.sleep(2000)
        composeTestRule.onNodeWithTag(TestTags.TEST_TAG_GAME_ZONE_SCREEN).assertIsDisplayed()
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).onLast().performClick()
        composeTestRule.onNodeWithTag(TestTags.TEST_TAG_SCRATCH_CARD_SCREEN).assertIsDisplayed()
        composeTestRule.onNodeWithText("Meow Scratch Mouse").assertIsDisplayed()
        composeTestRule.onNodeWithText("Play Scratch Card to Get Amazing Rewards").assertIsDisplayed()
        composeTestRule.onNodeWithText("Grab this exclusive onetime offer and win some exciting rewards.").assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("game_back_button").assertIsDisplayed()
        composeTestRule.onNodeWithContentDescription("game_back_button").performClick()
        composeTestRule.onNodeWithTag(TestTags.TEST_TAG_GAME_ZONE_SCREEN).assertIsDisplayed()
        Thread.sleep(2000)
        composeTestRule.onAllNodes(hasTestTag(TEST_TAG_GAME_ZONE_ITEM_IMAGE), useUnmergedTree=true).onLast().performClick()
        composeTestRule.onNodeWithTag(TestTags.TEST_TAG_SCRATCH_CARD_SCREEN).assertIsDisplayed()
        composeTestRule.onNodeWithTag(TestTags.TEST_TAG_SCRATCH_CARD).assertIsDisplayed()
        Thread.sleep(1000)
        composeTestRule.onNodeWithContentDescription("game_back_button").performClick()
        composeTestRule.onNodeWithText("Home").performClick()

        //will need in future
